--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
